--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,34 +1,34 @@
-version: '3.8'
+# version: '3.8'
 
-services:
-  # app:
-  #   build: .
-  #   ports:
-  #     - "3000:3000"
-  #   volumes:
-  #     - .:/app
-  #     - /app/node_modules
-  #   command: npm run dev
-  #   depends_on:
-  #     - db
-  #   environment:
-  #     DB_HOST: db
-  #     DB_USER: seu_usuario
-  #     DB_PASS: sua_senha
-  #     DB_NAME: seu_banco
+# services:
+#   # app:
+#   #   build: .
+#   #   ports:
+#   #     - "3000:3000"
+#   #   volumes:
+#   #     - .:/app
+#   #     - /app/node_modules
+#   #   command: npm run dev
+#   #   depends_on:
+#   #     - db
+#   #   environment:
+#   #     DB_HOST: db
+#   #     DB_USER: seu_usuario
+#   #     DB_PASS: sua_senha
+#   #     DB_NAME: seu_banco
 
-  db:
-    image: mysql:8.0
-    restart: always
-    environment:
-      MYSQL_ROOT_PASSWORD: admin
-      MYSQL_DATABASE: workdb
-      MYSQL_USER: root
-      MYSQL_PASSWORD: admin
-    ports:
-      - "3306:3306"
-    volumes:
-      - mysql-data:/var/lib/mysql
+#   db:
+#     image: mysql:8.0
+#     restart: always
+#     environment:
+#       MYSQL_ROOT_PASSWORD: admin
+#       MYSQL_DATABASE: workdb
+#       MYSQL_USER: root
+#       MYSQL_PASSWORD: admin
+#     ports:
+#       - "3306:3306"
+#     volumes:
+#       - mysql-data:/var/lib/mysql
 
-volumes:
-  mysql-data:
+# volumes:
+#   mysql-data:
