--- a/config/config.json
+++ b/config/config.json
@@ -3,7 +3,7 @@
         "username": "root",
         "password": "admin",
         "database": "workdb",
-        "host": "127.0.0.1",
+        "host": "DB",
         "dialect": "mysql"
     }
 }
