--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mysql2": "^3.14.1",
+    "node-cron": "^4.1.0",
     "sequelize": "^6.37.7",
     "sqlite3": "^5.1.7"
   }
